--- a/include/language/en_us.notify_template.html
+++ b/include/language/en_us.notify_template.html
@@ -82,7 +82,7 @@ Description: {ACCOUNT_DESCRIPTION}</p>
 <p>Subject: {CASE_SUBJECT}</br>
 Priority: {CASE_PRIORITY}</br>
 Status: {CASE_STATUS}</br>
-Description: {CASE_DESCRIPTION}</br>
+Description: {CASE_DESCRIPTION}</p>
 
 <p>You may review this Case at:</p>
 <{URL}>
@@ -250,7 +250,7 @@ Work Log: {BUG_WORK_LOG}</p>
 <p>SuiteCRM Call - {CALL_SUBJECT}</p>
 <!-- END: Call_Subject -->
 <!-- BEGIN: Call -->
-<p>To: {CALL_TO}<p>
+<p>To: {CALL_TO}</p>
 <p>{ASSIGNER} has invited you to a Call</p>
 <p>Subject: {CALL_SUBJECT}</br>
 Status: {CALL_STATUS}</br>
