Fixes task 108.  This removes the padding from an empty error box.  This should address each of the instances of this througout the project.

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -1834,8 +1834,13 @@ p.error {
     margin: 0;
 }
 
+
 .error {
     border: none;
+}
+
+.error:empty{
+    padding:0px;
 }
 
 div#content p.error {
