br tag code cleanup
</br> tag changed to <br /> tag

--- a/include/language/en_us.notify_template.html
+++ b/include/language/en_us.notify_template.html
@@ -48,9 +48,9 @@
 <!-- BEGIN: Quote -->
 <p>{ASSIGNER} has assigned a Quote to {ASSIGNED_USER}.</p>
 
-<p>Subject: {QUOTE_SUBJECT}</br>
-Status: {QUOTE_STATUS}</br>
-Expected Close Date: {QUOTE_CLOSEDATE}</br>
+<p>Subject: {QUOTE_SUBJECT}<br />
+Status: {QUOTE_STATUS}<br />
+Expected Close Date: {QUOTE_CLOSEDATE}<br />
 Description: {QUOTE_DESCRIPTION}</p>
 
 <p>You may review this Quote at:</p>
@@ -64,8 +64,8 @@ Description: {QUOTE_DESCRIPTION}</p>
 <!-- BEGIN: Account -->
 <p>{ASSIGNER} has assigned an Account to {ASSIGNED_USER}.</p>
 
-<p>Name: {ACCOUNT_NAME}</br>
-Type: {ACCOUNT_TYPE}</br>
+<p>Name: {ACCOUNT_NAME}<br />
+Type: {ACCOUNT_TYPE}<br />
 Description: {ACCOUNT_DESCRIPTION}</p>
 
 <p>You may review this Account at:</p>
@@ -79,9 +79,9 @@ Description: {ACCOUNT_DESCRIPTION}</p>
 <!-- BEGIN: Case -->
 <p>{ASSIGNER} has assigned a Case to {ASSIGNED_USER}.</p>
 
-<p>Subject: {CASE_SUBJECT}</br>
-Priority: {CASE_PRIORITY}</br>
-Status: {CASE_STATUS}</br>
+<p>Subject: {CASE_SUBJECT}<br />
+Priority: {CASE_PRIORITY}<br />
+Status: {CASE_STATUS}<br />
 Description: {CASE_DESCRIPTION}</p>
 
 <p>You may review this Case at:</p>
@@ -95,10 +95,10 @@ Description: {CASE_DESCRIPTION}</p>
 <!-- BEGIN: Task -->
 <p>{ASSIGNER} has assigned a Task to {ASSIGNED_USER}.</p>
 
-<p>Subject: {TASK_SUBJECT}</br>
-Priority: {TASK_PRIORITY}</br>
-Due Date: {TASK_DUEDATE}</br>
-Status: {TASK_STATUS}</br>
+<p>Subject: {TASK_SUBJECT}<br />
+Priority: {TASK_PRIORITY}<br />
+Due Date: {TASK_DUEDATE}<br />
+Status: {TASK_STATUS}<br />
 Description: {TASK_DESCRIPTION}</p>
 
 <p>You may review this Task at:</p>
@@ -114,8 +114,8 @@ Description: {TASK_DESCRIPTION}</p>
 
 <p>{ASSIGNER} has invited you to a Meeting</p>
 
-<p>Subject: {MEETING_SUBJECT}</br>
-Start Date: {MEETING_STARTDATE}</br>
+<p>Subject: {MEETING_SUBJECT}<br />
+Start Date: {MEETING_STARTDATE}<br />
 End Date: {MEETING_ENDDATE}</p>
 <p><!-- BEGIN: Meeting_External_API -->
 Meeting URL: {MEETING_URL}</p>
@@ -139,10 +139,10 @@ Meeting URL: {MEETING_URL}</p>
 <!-- BEGIN: MeetingSpecial -->
 <p>{ASSIGNER} has assigned a Meeting to {ASSIGNED_USER}.</p>
 
-<p>Subject: {MEETING_SUBJECT}</br>
-Status: {MEETING_STATUS}</br>
-Start Date: {MEETING_STARTDATE}</br>
-End Date: {MEETING_ENDDATE}</br>
+<p>Subject: {MEETING_SUBJECT}<br />
+Status: {MEETING_STATUS}<br />
+Start Date: {MEETING_STARTDATE}<br />
+End Date: {MEETING_ENDDATE}<br />
 Description: {MEETING_DESCRIPTION}</p>
 
 <p>You may review this Meeting at:</p>
@@ -156,7 +156,7 @@ Description: {MEETING_DESCRIPTION}</p>
 <!-- BEGIN: Email -->
 <p>{ASSIGNER} has assigned an Email to {ASSIGNED_USER}.</p>
 
-<p>Subject: {EMAIL_SUBJECT}</br>
+<p>Subject: {EMAIL_SUBJECT}<br />
 Date Sent: {EMAIL_DATESENT}</p>
 
 <p>You may review this Email at:</p>
@@ -174,7 +174,7 @@ Date Sent: {EMAIL_DATESENT}</p>
 <!-- BEGIN: Contact -->
 <p>{ASSIGNER} has assigned a Contact to {ASSIGNED_USER}.</p>
 
-<p>Name: {CONTACT_NAME}</br>
+<p>Name: {CONTACT_NAME}<br />
 Description: {CONTACT_DESCRIPTION}</p>
 
 <p>You may review this Contact at:</p>
@@ -188,9 +188,9 @@ Description: {CONTACT_DESCRIPTION}</p>
 <!-- BEGIN: Lead -->
 <p>{ASSIGNER} has assigned a Lead to {ASSIGNED_USER}.</p>
 
-<p>Name: {LEAD_NAME}</br>
-Lead Source: {LEAD_SOURCE}</br>
-Status: {LEAD_STATUS}</br>
+<p>Name: {LEAD_NAME}<br />
+Lead Source: {LEAD_SOURCE}<br />
+Status: {LEAD_STATUS}<br />
 Description: {LEAD_DESCRIPTION}</p>
 
 <p>You may review this Lead at:</p>
@@ -204,10 +204,10 @@ Description: {LEAD_DESCRIPTION}</p>
 <!-- BEGIN: Opportunity -->
 <p>{ASSIGNER} has assigned an Opportunity to {ASSIGNED_USER}.</p>
 
-<p>Name: {OPPORTUNITY_NAME}</br>
-Amount: {OPPORTUNITY_AMOUNT}</br>
-Expected Close Date: {OPPORTUNITY_CLOSEDATE}</br>
-Sales Stage: {OPPORTUNITY_STAGE}</br>
+<p>Name: {OPPORTUNITY_NAME}<br />
+Amount: {OPPORTUNITY_AMOUNT}<br />
+Expected Close Date: {OPPORTUNITY_CLOSEDATE}<br />
+Sales Stage: {OPPORTUNITY_STAGE}<br />
 Description: {OPPORTUNITY_DESCRIPTION}</p>
 
 <p>You may review this Opportunity at:</p>
@@ -221,14 +221,14 @@ Description: {OPPORTUNITY_DESCRIPTION}</p>
 <!-- BEGIN: Bug -->
 <p>{ASSIGNER} has assigned a Bug to {ASSIGNED_USER}.</p>
 
-<p>Bug Number: {BUG_BUG_NUMBER}</br>
-Subject: {BUG_SUBJECT}</br>
-Type: {BUG_TYPE}</br>
-Priority: {BUG_PRIORITY}</br>
-Status: {BUG_STATUS}</br>
-Resolution: {BUG_RESOLUTION}</br>
-Release: {BUG_RELEASE}</br>
-Description: {BUG_DESCRIPTION}</br>
+<p>Bug Number: {BUG_BUG_NUMBER}<br />
+Subject: {BUG_SUBJECT}<br />
+Type: {BUG_TYPE}<br />
+Priority: {BUG_PRIORITY}<br />
+Status: {BUG_STATUS}<br />
+Resolution: {BUG_RESOLUTION}<br />
+Release: {BUG_RELEASE}<br />
+Description: {BUG_DESCRIPTION}<br />
 Work Log: {BUG_WORK_LOG}</p>
 
 <p>You may review this Bug at:</p>
@@ -252,10 +252,10 @@ Work Log: {BUG_WORK_LOG}</p>
 <!-- BEGIN: Call -->
 <p>To: {CALL_TO}</p>
 <p>{ASSIGNER} has invited you to a Call</p>
-<p>Subject: {CALL_SUBJECT}</br>
-Status: {CALL_STATUS}</br>
-Start Date: {CALL_STARTDATE}</br>
-Duration: {CALL_HOURS}h, {CALL_MINUTES}m</br>
+<p>Subject: {CALL_SUBJECT}<br />
+Status: {CALL_STATUS}<br />
+Start Date: {CALL_STARTDATE}<br />
+Duration: {CALL_HOURS}h, {CALL_MINUTES}m<br />
 Description: {CALL_DESCRIPTION}</p>
 
 <p>Accept this call:</p>
@@ -275,10 +275,10 @@ Description: {CALL_DESCRIPTION}</p>
 <!-- BEGIN: CallSpecial -->
 <p>{ASSIGNER} has assigned a Call to {ASSIGNED_USER}.</p>
 
-<p>Subject: {CALL_SUBJECT}</br>
-Status: {CALL_STATUS}</br>
-Start Date: {CALL_STARTDATE}</br>
-Duration: {CALL_HOURS}h, {CALL_MINUTES}m</br>
+<p>Subject: {CALL_SUBJECT}<br />
+Status: {CALL_STATUS}<br />
+Start Date: {CALL_STARTDATE}<br />
+Duration: {CALL_HOURS}h, {CALL_MINUTES}m<br />
 Description: {CALL_DESCRIPTION}</p>
 
 <p>You may review this Call at:</p>
@@ -291,10 +291,10 @@ Description: {CALL_DESCRIPTION}</p>
 <!-- BEGIN: Campaign -->
 <p>{ASSIGNER} has assigned a Campaign to {ASSIGNED_USER}.</p>
 
-<p>Subject: {CAMPAIGN_NAME}</br>
-Amount: {CAMPAIGN_AMOUNT}</br>
-Close Date: {CAMPAIGN_CLOSEDATE}</br>
-Status: {CAMPAIGN_STATUS}</br>
+<p>Subject: {CAMPAIGN_NAME}<br />
+Amount: {CAMPAIGN_AMOUNT}<br />
+Close Date: {CAMPAIGN_CLOSEDATE}<br />
+Status: {CAMPAIGN_STATUS}<br />
 Description: {CAMPAIGN_DESCRIPTION}</p>
 
 <p>You may review this Campaign at:</p>
@@ -307,7 +307,7 @@ Description: {CAMPAIGN_DESCRIPTION}</p>
 <!-- BEGIN: Quota -->
 <p>{ASSIGNER} has assigned a Quota to {ASSIGNED_USER}.</p>
 
-<p>Amount: {QUOTA_AMOUNT}</br>
+<p>Amount: {QUOTA_AMOUNT}<br />
 Timeperiod: {QUOTA_TIMEPERIOD}</p>
 
 <p>You may review this Quota assignment at:</p>
@@ -321,10 +321,10 @@ Timeperiod: {QUOTA_TIMEPERIOD}</p>
 
 {NOTIFICATION_MESSAGE}
 
-<p>Name: {KBDOCUMENT_NAME}</br>
-Created Date: {KBDOCUMENT_DATE_CREATED}</br>
-Created By: {KBDOCUMENT_CREATED_BY}</br>
-Status: {KBDOCUMENT_STATUS}</br>
+<p>Name: {KBDOCUMENT_NAME}<br />
+Created Date: {KBDOCUMENT_DATE_CREATED}<br />
+Created By: {KBDOCUMENT_CREATED_BY}<br />
+Status: {KBDOCUMENT_STATUS}<br />
 Description: {KBDOCUMENT_DESCRIPTION}</p>
 
 <p>You may review this Document at:</p>
@@ -357,9 +357,9 @@ Description: {KBDOCUMENT_DESCRIPTION}</p>
 <p>Meeting Reminder - {MEETING_SUBJECT}</p>
 <!-- END: MeetingSpecial_Subject -->
 <!-- BEGIN: MeetingReminder -->
-<p>Title: {MEETING_SUBJECT}</br>
-When: {MEETING_STARTDATE}</br>
-Location: {MEETING_LOCATION}</br>
+<p>Title: {MEETING_SUBJECT}<br />
+When: {MEETING_STARTDATE}<br />
+Location: {MEETING_LOCATION}<br />
 Created By: {MEETING_CREATED_BY}</p>
 <!-- END: MeetingReminder -->
 
@@ -367,7 +367,7 @@ Created By: {MEETING_CREATED_BY}</p>
 <p>Call Reminder - {CALL_SUBJECT}</p>
 <!-- END: CallReminder_Subject -->
 <!-- BEGIN: CallReminder -->
-<p>Title: {CALL_SUBJECT}</br>
-When: {CALL_STARTDATE}</br>
+<p>Title: {CALL_SUBJECT}<br />
+When: {CALL_STARTDATE}<br />
 Created By: {CALL_CREATED_BY}</p>
 <!-- END: CallReminder -->
