--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -4829,6 +4829,10 @@ table legend {
     border: 1px solid #dddddd;
 }
 
+.table-responsive > tbody > tr > td {
+    padding: 4px;
+}
+
 #usermenucollapsed, #usermenucollapsed-mobile {
     margin: 0 0 0 5px;
     display: none;
