--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -1675,9 +1675,14 @@ div#responseTime {
 .monthHeader {
     padding: 6px 5px 4px 3px;
     margin-top: 10px;
+    border: none;
+    background: #BFCAD3;
+    color: #ffffff;
     vertical-align: middle;
-    background-repeat: repeat-x;
-    background-position: top;
+    border: 1px solid transparent;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    line-height: 42px;
 }
 
 .monthHeader td {
@@ -1779,6 +1784,30 @@ div#responseTime {
     border-top: 1px;
 }
 
+#calendar1 > div.fc-toolbar {
+    visibility: collapse;
+    display: none;
+    height: 0 ;
+}
+
+.monthCalBody > .calSharedUser {
+    display: none;
+    height: 0;
+    visibility: collapse;
+}
+
+thead.fc-head {
+    background: #778591;
+    color: #ffffff;
+}
+
+thead.fc-head tr td {
+    padding: 8px;
+}
+
+.fc-day-number {
+    color: #ffffff;
+}
 .calendar {
     border: 1px solid #999;
 }
@@ -2895,13 +2924,6 @@ h5.calSharedUser {
     color: #444444;
 }
 
-.monthHeader {
-    color: #444;
-    background-color: #fff;
-    border-color: #abc3d7;
-    background-image: url('../../../../index.php?entryPoint=getImage&imageName=bg.gif');
-}
-
 .subpanelTabForm {
     border-color: #3C8DBC;
     color: #000000;
@@ -3629,12 +3651,6 @@ iframe.teamNoticeBox {
 
 .evenListRowS1 {
     background: #efefef;
-}
-
-.monthHeader {
-    border: none;
-    background: #efefef;
-    padding: 5px;
 }
 
 .toggler {
