--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -2469,6 +2469,153 @@ embed {
     background-color: #fff;
 }
 
+#goto_date_trigger_div {
+    border: none;
+    padding: 0;
+}
+
+.yui-panel-container {
+    height: 384px;
+}
+
+div#goto_date_trigger_div, table#goto_date_trigger_div_t {
+    width: 256px;
+    height: auto;
+}
+
+.yui-calcontainer .yui-cal-nav .yui-cal-nav-btn {
+    background-color: inherit !important;
+    border: none !important;
+}
+
+#goto_date_trigger_div_nav_cancel {
+    background-color: #F08377;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 13px !important;
+    margin: 0 0 0 0;
+    padding: 0 10px 0 10px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 1px;
+    height: 40px;
+    line-height: 40px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+#goto_date_trigger_div_nav_submit {
+    text-shadow: none !important;
+    background-color: #F08377;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 13px !important;
+    margin: 0 0 0 0;
+    padding: 0 10px 0 10px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 1px;
+    height: 40px;
+    line-height: 40px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+table#goto_date_trigger_div_t thead {
+    background: #BFCAD3;
+}
+
+.yui-calendar .calweekdaycell {
+    font-weight: normal;
+}
+
+.yui-calendar .calhead {
+    background: #66727D;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.yui-calendar a.calnav {
+    color: #ffffff;
+    background-color: #AA9DCC;
+    border: 1px solid #AA9DCC;
+    padding: 8px;
+    border-radius: 4px;
+    text-transform: uppercase;
+    font-weight: normal;
+    height: auto;
+    width: auto;
+}
+
+.yui-calendar a.calnavleft, .yui-calendar a.calnavright {
+    color: #ffffff;
+    background-image: none;
+    background-color: #AA9DCC;
+    border: 1px solid #AA9DCC;
+    padding: 0;
+    border-radius: 4px;
+    text-transform: uppercase;
+    font-weight: normal;
+    height: 32px;
+    width: 32px;
+    display: inline-block;
+    margin-top: 10px;
+}
+
+.yui-calendar .calheader {
+    padding: 4px;
+    height: 48px;
+    line-height: 48px;
+}
+
+.yui-calendar .calnavleft {
+    left: 0px;
+}
+
+.yui-calendar .calnavright {
+    right: 0px;
+}
+.yui-module .hd {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.yui-module .ft {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.yui-module.yui-overlay.yui-panel.cal_panel {
+    border-radius: 4px;
+}
+.yui-panel .bd {
+    display: block;
+    padding: 0 10px 0 10px;
+}
+
+.yui-calendar .calbody td, .yui-calendar td.calcell a {
+    height: 32px;
+    width: 32px;
+    color: #F08377;
+    line-height: 32px;
+}
+
+.yui-calendar td.calcell a:hover,
+.yui-calendar td.calcell.calcellhover,
+.yui-calendar td.calcell.calcellhover a {
+    background: #F08377;
+    color: #ffffff;
+}
+
+a#callnav_today {
+    clear:both !important;
+    line-height: 40px !important;
+    display: block !important;
+}
+
 div.confirmTable {
     overflow: auto;
     width: 1056px;
@@ -4167,7 +4314,6 @@ fieldset[disabled] .btn-primary.active {
 
 .btn-info, .btn-info:hover, .btn-info:active, .btn-info:focus {
     color: #ffffff;
-    background-color: #AA9DCC;
     background-color: #AA9DCC;
     border: 1px solid #AA9DCC;
 }
