subpanel: adding extra space between caret and button

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -6866,6 +6866,7 @@ table.subpanel-table .pagination .sugar_action_button,
 table.subpanel-table .pagination ul.clickMenu li span {
     float: right;
     margin-top: 12px;
+    margin-left: 12px;
 }
 
 
