--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -6933,7 +6933,7 @@ table.subpanel-table .pagination li.sugar_action_button > form > a {
 }
 
 table.subpanel-table ul.subpanel > a,
-.single,
+.single  a,
 .single > a,
 #actionLinkTop li.sugar_action_button,
 table.subpanel-table li.sugar_action_button,
