--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -6745,6 +6745,15 @@ div.list-view-rounded-corners > table th:last-of-type {
     border-bottom-right-radius: 4px;
 }
 
+.col-advanced-search {
+    margin-bottom: 16px;
+
+}
+
+.col-advanced-search label {
+    font-weight: 700;
+}
+
 /*////////////////////////////////////////////////////////////////////////////////////////// MEDIA QUERIES //////////*/
 
 @media (max-width: 3000px) {
