--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -4366,16 +4366,6 @@ span.crumbLink {
     background: none;
 }
 
-select, textarea {
-    border: 1px solid #ccc;
-    padding: 4px;
-}
-
-select:focus {
-    border: 1px solid #F08377;
-    padding: 4px;
-}
-
 .chartContainer table tr td {
     padding: 3px;
 }
@@ -5437,23 +5427,53 @@ div.search_fields_basic .dateTimeRangeChoice, div.search_fields_basic .dateTimeR
     border: 1px solid #e2e7eb;
     background: #f8f8f8;
 }
+textarea {
+    width: 50%;
+}
 
-select, select:focus, select::selection, .saved_search_select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    overflow: hidden;
-    background-color: #ffffff;
+select {
+    background-color: #FFFFFF;
+    border-style: solid;
+    border-size: 1px;
+    border-color: #A5E8D6;
+    border-radius: 4px;
+    padding: 16px 55px 16px 5px;
     background: url("../../../../themes/SuiteP/images/forms/select.ico") no-repeat right #ffffff;
     background-size: 52px 52px;
-    border: 3px solid #a5e8d6;
-    border-radius: 4px;
-    padding: 5px 50px 5px 5px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+}
 
-    line-height: 40px;
-    outline: 0;
-    scrollbar-base-color: #A5E8D6;
-    scrollbar-arrow-color: #A5E8D6;
+select:focus {
+    border-style: solid;
+    border-size: 1px;
+    border-color: #A5E8D6;
+    border-radius: 4px;
+}
+select::selection {
+    border-style: solid;
+    border-size: 1px;
+    border-color: #A5E8D6;
+    border-radius: 4px;
+}
+.saved_search_select {
+    /*!*-moz-appearance: none;*!*/
+    /*!*-webkit-appearance: none;*!*/
+    /*!*appearance: none;*!*/
+    /*!*overflow: hidden;*!*/
+    /*background-color: #ffffff;*/
+    /*!*background: url("../../../../themes/SuiteP/images/forms/select.ico") no-repeat right #ffffff;*!*/
+    /*background-size: 52px 52px;*/
+    /*border-size: 1px;*/
+    /*border-style: solid;*/
+    /*border-color: #a5e8d6;*/
+    /*border-radius: 4px;*/
+    /*padding: 15px;*/
+    /*!*line-height: 40px;*!*/
+    /*!*outline: 0;*!*/
+    /*!*scrollbar-base-color: #A5E8D6;*!*/
+    /*!*scrollbar-arrow-color: #A5E8D6;*!*/
 }
 
 select[multiple] {
