--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -5443,9 +5443,15 @@ select {
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
+    outline: 0;
+    scrollbar-base-color: #A5E8D6;
+    scrollbar-arrow-color: #A5E8D6;
 }
 
 select:focus {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
     border-style: solid;
     border-size: 1px;
     border-color: #A5E8D6;
@@ -5457,23 +5463,19 @@ select::selection {
     border-color: #A5E8D6;
     border-radius: 4px;
 }
+
 .saved_search_select {
-    /*!*-moz-appearance: none;*!*/
-    /*!*-webkit-appearance: none;*!*/
-    /*!*appearance: none;*!*/
-    /*!*overflow: hidden;*!*/
-    /*background-color: #ffffff;*/
-    /*!*background: url("../../../../themes/SuiteP/images/forms/select.ico") no-repeat right #ffffff;*!*/
-    /*background-size: 52px 52px;*/
-    /*border-size: 1px;*/
-    /*border-style: solid;*/
-    /*border-color: #a5e8d6;*/
-    /*border-radius: 4px;*/
-    /*padding: 15px;*/
-    /*!*line-height: 40px;*!*/
-    /*!*outline: 0;*!*/
-    /*!*scrollbar-base-color: #A5E8D6;*!*/
-    /*!*scrollbar-arrow-color: #A5E8D6;*!*/
+    background-color: #FFFFFF;
+    border-style: solid;
+    border-size: 1px;
+    border-color: #A5E8D6;
+    border-radius: 4px;
+    padding: 16px 55px 16px 5px;
+    background: url("../../../../themes/SuiteP/images/forms/select.ico") no-repeat right #ffffff;
+    background-size: 52px 52px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 select[multiple] {
