Relate field buttons show on new line (task 214)

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -5264,6 +5264,14 @@ input[type=text], input[type=password], input:not([type]), textarea {
     line-height: 40px;
 }
 
+div[type="relate"] input[type=text],
+div[type="relate"] input[type=password],
+div[type="relate"] input:not([type]),
+div[type="relate"] textarea {
+    float: left;
+    margin-right: 5px;
+}
+
 .search_form input[type=text], .search_form textarea {
     background: #ffffff;
 }
